--- a/vercel.json
+++ b/vercel.json
@@ -20,5 +20,11 @@
             "source": "/(.*)",
             "destination": "/"
         }
-    ]
+    ],
+    "env": {
+        "BRANCH": "develop"
+    },
+    "scripts": {
+        "vercel-deploy": "if [ \"$BRANCH\" != \"main\" ]; then echo \"Cannot deploy from $BRANCH branch\"; exit 1; fi"
+    }
 }
