--- a/vercel.json
+++ b/vercel.json
@@ -6,19 +6,10 @@
             "use": "@vercel/static-build"
         }
     ],
-    "routes": [
-        {
-            "handle": "filesystem"
-        },
-        {
-            "src": "/.*",
-            "dest": "/index.html"
-        }
-    ],
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "/"
+            "destination": "/index.html"
         }
     ]
 }
