--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@react-input/mask": "^1.2.3",
     "@types/react-input-mask": "^3.0.5",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.6.8",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
@@ -20,8 +21,11 @@
     "react-icons": "^5.2.1",
     "react-imask": "^7.6.0",
     "react-input-mask": "^2.0.4",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.26.4",
+    "styled-components": "^6.1.11",
     "use-mask-input": "^3.3.7",
     "zod": "^3.23.8"
   },
@@ -29,6 +33,7 @@
     "@types/node": "^20.12.11",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^18.2.22",
+    "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -37,5 +42,8 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
