--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@react-input/mask": "^1.2.3",
+    "@react-pdf/renderer": "^3.4.4",
     "@types/react-input-mask": "^3.0.5",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.8",
